# VolaAI

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.api  Dockerfile.web  README.md  build.rs
Scraping/: context_manager.py  formatter.py  models.py  planner.py
agent/: Cargo.toml  Dockerfile  build.rs  justfile  railway.toml
agent/proto/: agent.proto  ocr.proto  scraping.proto
agent/src/: config.rs  error.rs  main.rs  server.rs
agent/src/orchestrator/: mod.rs  preamble.rs
agent/src/tools/: mod.rs
agent/src/tools/destination_id/: mod.rs
agent/src/tools/ocr/: client.rs  mod.rs
agent/src/tools/scraper/: client.rs  mod.rs
api/: .env.example  Dockerfile  dev.yaml  justfile  nginx.conf  package-lock.json  package.json  railway.toml  tsconfig.json
api/prisma/: schema.prisma
api/prisma/migrations/20260314121100_2026_03_14_12_10_59/: migration.sql
api/prisma/migrations/20260314153000_whatsapp_groups_and_credits/: migration.sql
api/prisma/migrations/20260314171746_map_users_table/: migration.sql
api/src/: app.module.ts  main.ts
api/src/agent/: agent.service.ts
api/src/db/: prisma.service.ts
api/src/dto/: incoming-message.dto.ts
api/src/media/: media.controller.ts  media.service.ts
api/src/stripe/: stripe.controller.ts  stripe.service.ts
api/src/whatsapp/: whatsapp.controller.ts  whatsapp.module.ts  whatsapp.service.ts
ocr/: Dockerfile  booking_parser.py  formatter.py  justfile  main.py  models.py  ocr_provider.py  railway.toml  requirements.txt  server.py  trip_check.py  utils.py
proto/: agent.proto  ocr.proto
scraper/: Dockerfile  README.md  justfile  main.py  railway.toml  server.py  vola_client.py
scraper/proto/: scraping.proto
src/: config.rs  error.rs  main.rs
web/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  railway.toml
web/src/: App.css  App.jsx  index.css
web/src/components/: FAQ.jsx  Features.jsx  Footer.jsx  Hero.jsx  Navbar.jsx  TrustBar.jsx
web/src/lib/: api.js
(+13 files in other folders)
