[workspace]
members = ["agent"]
resolver = "2"

[package]
name = "vibehack-2026"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio         = { version = "1", features = ["full"] }
anyhow        = "1"
dotenvy       = "0.15.7"
thiserror     = "2"
tonic         = "0.12"
prost         = "0.13"
tracing       = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid          = { version = "1", features = ["v4"] }

[build-dependencies]
tonic-build = "0.12"
